--- a/gradle.properties
+++ b/gradle.properties
@@ -28,3 +28,6 @@ forge_version_range=[46,)
 # NeoForge
 neoforge_version=20.4.117-beta
 neoforge_loader_version_range=[1,)
+
+# Dependencies
+night_config=3.6.5
