--- a/forge/build.gradle
+++ b/forge/build.gradle
@@ -65,6 +65,7 @@ tasks.named("sourcesJar", Jar) {
 processResources {
     from project(":common").sourceSets.main.resources
     from file('src/generated/resources')
+    exclude 'logo.png'
 }
 
 jar.finalizedBy('reobfJar')
