--- a/gradle.properties
+++ b/gradle.properties
@@ -20,14 +20,18 @@ minecraft_version_range=[1.20, 1.21)
 fabric_api_version=0.95.0+1.20.4
 fabric_loader_version=0.15.6
 
+# Quilt
+quilt_api_version=8.0.0-alpha.3+0.91.2-1.20.2
+quilt_loader_version=0.23.1
+
 # Forge
 forge_version=49.0.19
 forge_loader_version_range=[46,)
 forge_version_range=[46,)
 
 # NeoForge
-neoforge_version=20.4.117-beta
+neoforge_version=20.4.161-beta
 neoforge_loader_version_range=[1,)
 
 # Dependencies
-night_config=3.6.5
+night_config=3.6.6
