--- a/settings.gradle
+++ b/settings.gradle
@@ -5,6 +5,7 @@ pluginManagement {
         maven { url 'https://maven.minecraftforge.net/' }
         maven { url 'https://maven.neoforged.net/releases/' }
         maven { url 'https://repo.spongepowered.org/repository/maven-public/' }
+        maven { url 'https://maven.quiltmc.org/repository/release' }
     }
 }
 
@@ -18,3 +19,4 @@ include("common")
 include("fabric")
 include("forge")
 include("neoforge")
+include("quilt")
