--- a/gradle.properties
+++ b/gradle.properties
@@ -3,7 +3,7 @@ org.gradle.daemon=false
 
 # Project
 version=0.0.1
-group=net.xstopho.resource_config_api
+group=net.xstopho.resourceconfigapi
 minecraft_base_version=1.20
 
 # Common
