--- a/common/build.gradle
+++ b/common/build.gradle
@@ -2,7 +2,7 @@ plugins {
     id 'org.spongepowered.gradle.vanilla' version '0.2.1-SNAPSHOT'
 }
 base {
-    archivesName = "${mod_id}-common-${minecraft_base_version}"
+    archivesName = "${mod_id}-common"
 }
 minecraft {
     version(minecraft_version)
