--- a/fabric/build.gradle
+++ b/fabric/build.gradle
@@ -3,7 +3,7 @@ plugins {
 }
 
 base {
-    archivesName = "${mod_id}-fabric-${minecraft_base_version}"
+    archivesName = "${mod_id}-fabric"
 }
 
 configurations {
