--- a/gradle.properties
+++ b/gradle.properties
@@ -2,9 +2,8 @@ org.gradle.jvmargs=-Xmx4096M
 org.gradle.daemon=false
 
 # Project
-version=0.0.1
+version=1.20+0.0.1
 group=net.xstopho.resourceconfigapi
-minecraft_base_version=1.20
 
 # Common
 minecraft_version=1.20.4
