--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,4 @@
 plugins {
-    // Required for NeoGradle
     id "org.jetbrains.gradle.plugin.idea-ext" version "1.1.7"
 }
 
@@ -85,7 +84,7 @@ subprojects {
                 "neoforge_loader_version_range": neoforge_loader_version_range
         ]
 
-        filesMatching(['pack.mcmeta', 'fabric.mod.json', 'quilt.mod.json', 'META-INF/mods.toml', '*.mixins.json']) {
+        filesMatching(['pack.mcmeta', 'fabric.mod.json', 'META-INF/mods.toml', '*.mixins.json']) {
             expand expandProps
         }
         inputs.properties(expandProps)
@@ -99,7 +98,7 @@ subprojects {
     }
 
     publishing {
-        def mavenDirectory = System.getenv("MAVEN_REPOSITORY_TEST")
+        def mavenDirectory = MAVEN_REPOSITORY_TEST
         def artifact = mod_id + "-" + base.archivesName.get()
         def commitMessage = artifact + " " + version
 
