--- a/gradle.properties
+++ b/gradle.properties
@@ -16,20 +16,16 @@ mod_description=Config Api mainly for xStopho's Mods
 minecraft_version_range=[1.20, 1.21)
 
 # Fabric
-fabric_api_version=0.95.0+1.20.4
-fabric_loader_version=0.15.6
-
-# Quilt
-quilt_api_version=8.0.0-alpha.3+0.91.2-1.20.2
-quilt_loader_version=0.23.1
+fabric_api_version=0.96.3+1.20.4
+fabric_loader_version=0.15.7
 
 # Forge
-forge_version=49.0.19
+forge_version=49.0.30
 forge_loader_version_range=[46,)
 forge_version_range=[46,)
 
 # NeoForge
-neoforge_version=20.4.161-beta
+neoforge_version=20.4.173
 neoforge_loader_version_range=[1,)
 
 # Dependencies
