--- a/gradle.properties
+++ b/gradle.properties
@@ -2,30 +2,32 @@ org.gradle.jvmargs=-Xmx4096M
 org.gradle.daemon=false
 
 # Project
-version=1.21+1.0.0
+version=1.20.5+1.0.0
 group=net.xstopho.resourceconfigapi
+curseforge_id=975801
+modrinth_id=69TY9iyJ
 
 # Common
-minecraft_version=1.20.4
+minecraft_version=1.20.5
 mod_name=Resource Config API
 mod_author=xStopho
 mod_id=resourceconfigapi
 mod_license=MIT
 mod_credits=
 mod_description=Config Api mainly for xStopho's Mods
-minecraft_version_range=[1.20, 1.21)
+minecraft_version_range=[1.20.5, 1.21)
 
 # Fabric
-fabric_api_version=0.96.4+1.20.4
-fabric_loader_version=0.15.7
+fabric_api_version=0.97.6+1.20.5
+fabric_loader_version=0.15.10
 
 # Forge
-forge_version=49.0.31
+forge_version=1.20.4-49.0.31
 forge_loader_version_range=[46,)
 forge_version_range=[46,)
 
 # NeoForge
-neoforge_version=20.4.196
+neoforge_version=20.5.0-beta
 neoforge_loader_version_range=[1,)
 
 # Dependencies
