--- a/settings.gradle
+++ b/settings.gradle
@@ -17,5 +17,5 @@ plugins {
 rootProject.name = 'Resource-Config-API'
 include("common")
 include("fabric")
-include("forge")
+//include("forge")
 include("neoforge")
