--- a/common/build.gradle
+++ b/common/build.gradle
@@ -2,13 +2,12 @@ plugins {
     id 'org.spongepowered.gradle.vanilla' version '0.2.1-SNAPSHOT'
 }
 base {
-    archivesName = "${mod_id}-common"
+    archivesName = "${mod_name}-common-${minecraft_version}"
 }
 minecraft {
     version(minecraft_version)
-    if(file("src/main/resources/${mod_id}.accesswidener").exists()){
-        accessWideners(file("src/main/resources/${mod_id}.accesswidener"))
-    }
+    var aw = file("src/main/resources/${mod_id}.accesswidener")
+    if(aw.exists()) accessWideners(aw)
 }
 
 dependencies {
