--- a/build.gradle
+++ b/build.gradle
@@ -27,7 +27,7 @@ subprojects {
     publishMods {
         if (project.name != 'common') {
             displayName = file.map { it.asFile.name }
-            type = ALPHA
+            type = STABLE
 
             var changelogFile = rootProject.file('CHANGELOG.md')
             if (changelogFile.exists()) changelog = changelogFile.text
@@ -118,7 +118,7 @@ subprojects {
     }
 
     publishing {
-        def mavenDirectory = MAVEN_REPOSITORY_TEST
+        def mavenDirectory = MAVEN_REPOSITORY
         def artifact = mod_id + "-" + base.archivesName.get()
         def commitMessage = artifact + " " + version
 
