--- a/gradle.properties
+++ b/gradle.properties
@@ -2,32 +2,35 @@ org.gradle.jvmargs=-Xmx4096M
 org.gradle.daemon=false
 
 # Project
-version=1.20.5+1.0.0
+version=1.20-1.1.0
 group=net.xstopho.resourceconfigapi
 curseforge_id=975801
 modrinth_id=69TY9iyJ
 
 # Common
-minecraft_version=1.20.5
+minecraft_version=1.20.4
 mod_name=Resource Config API
 mod_author=xStopho
 mod_id=resourceconfigapi
 mod_license=MIT
 mod_credits=
-mod_description=Config Api mainly for xStopho's Mods
-minecraft_version_range=[1.20.5, 1.21)
+mod_description=Very Basic Config API based on Night Config. \nIt doesn't have fancy features.
+
+# needs to be added back to neoforge mods file when 1.21 is released
+# NeoForge only for 1.20.4 and .5
+minecraft_version_range=[1.20, 1.21)
 
 # Fabric
-fabric_api_version=0.97.6+1.20.5
+fabric_api_version=0.97.0
 fabric_loader_version=0.15.10
 
 # Forge
-forge_version=1.20.4-49.0.31
+forge_version=49.0.49
 forge_loader_version_range=[46,)
 forge_version_range=[46,)
 
 # NeoForge
-neoforge_version=20.5.0-beta
+neoforge_version=20.4.233
 neoforge_loader_version_range=[1,)
 
 # Dependencies
