--- a/buildSrc/src/main/groovy/ml-common.gradle
+++ b/buildSrc/src/main/groovy/ml-common.gradle
@@ -63,7 +63,7 @@ processResources {
             "neoforge_loader_version_range": neoforge_loader_version_range
     ]
 
-    filesMatching(['pack.mcmeta', 'fabric.mod.json', 'META-INF/mods.toml', 'META_INF/neoforge.mods.toml', '*.mixins.json']) {
+    filesMatching(['pack.mcmeta', 'fabric.mod.json', 'META-INF/neoforge.mods.toml', 'META-INF/mods.toml',  '*.mixins.json']) {
         expand expandProps
     }
     inputs.properties(expandProps)
