--- a/neoforge/build.gradle
+++ b/neoforge/build.gradle
@@ -23,8 +23,18 @@ publishMods {
     file = jar.archiveFile
     modLoaders.add("neoforge")
 
-    modrinth { minecraftVersions.addAll('1.20.4', '1.20.5') }
-    curseforge { minecraftVersions.addAll('1.20.4', '1.20.5') }
+    modrinth {
+        minecraftVersionRange {
+            start = '1.20.4'
+            end = '1.20.5'
+        }
+    }
+    curseforge {
+        minecraftVersionRange {
+            start = '1.20.4'
+            end = '1.20.5'
+        }
+    }
 }
 
 publishing {
