project: bump versions

--- a/gradle.properties
+++ b/gradle.properties
@@ -2,7 +2,7 @@ org.gradle.jvmargs=-Xmx4096M
 org.gradle.daemon=false
 
 # Project
-version=1.20-1.1.0
+version=1.20-1.2.0
 group=net.xstopho.resourceconfigapi
 curseforge_id=975801
 modrinth_id=69TY9iyJ
@@ -16,7 +16,7 @@ mod_license=MIT
 mod_credits=
 mod_description=Very Basic Config API based on Night Config. \nIt doesn't have fancy features.
 
-# needs to be added back to neoforge mods file when 1.21 is released
+# TODO needs to be added back to neoforge mods file when 1.21 is released
 # NeoForge only for 1.20.4 and .5
 minecraft_version_range=[1.20, 1.21)
 
@@ -34,4 +34,4 @@ neoforge_version=20.4.233
 neoforge_loader_version_range=[1,)
 
 # Dependencies
-night_config=3.6.6
+night_config=3.7.2
