--- a/build.gradle
+++ b/build.gradle
@@ -23,11 +23,11 @@ subprojects {
             else changelog = 'NO VALID CHANGELOG FILE FOUND!'
 
             modrinth {
-                accessToken = MODRINTH_KEY
+                accessToken = MODRINTH_API_KEY
                 projectId = modrinth_id
             }
             curseforge {
-                accessToken = CURSEFORGE_KEY
+                accessToken = CURSEFORGE_API_KEY
                 projectId = curseforge_id
 
                 clientRequired = true
