--- a/gradle.properties
+++ b/gradle.properties
@@ -2,13 +2,13 @@ org.gradle.jvmargs=-Xmx4096M
 org.gradle.daemon=false
 
 # Project
-version=1.20-1.2.0
+version=1.21-2.0.0
 group=net.xstopho.resourceconfigapi
 curseforge_id=975801
 modrinth_id=69TY9iyJ
 
 # Common
-minecraft_version=1.20.4
+minecraft_version=1.21
 mod_name=Resource Config API
 mod_author=xStopho
 mod_id=resourceconfigapi
@@ -16,22 +16,20 @@ mod_license=MIT
 mod_credits=
 mod_description=Very Basic Config API based on Night Config. \nIt doesn't have fancy features.
 
-# TODO needs to be added back to neoforge mods file when 1.21 is released
-# NeoForge only for 1.20.4 and .5
-minecraft_version_range=[1.20, 1.21)
+minecraft_version_range=[1.21, 1.22)
 
 # Fabric
-fabric_api_version=0.97.0
-fabric_loader_version=0.15.10
+fabric_api_version=0.100.1
+fabric_loader_version=0.15.11
 
 # Forge
-forge_version=49.0.49
-forge_loader_version_range=[46,)
-forge_version_range=[46,)
+forge_version=51.0.8
+forge_loader_version_range=[51,)
+forge_version_range=[51,)
 
 # NeoForge
-neoforge_version=20.4.233
-neoforge_loader_version_range=[1,)
+neoforge_version=21.0.8-beta
+neoforge_loader_version_range=[2,)
 
 # Dependencies
 night_config=3.7.2
