--- a/common/src/main/resources/resourceconfigapi.mixins.json
+++ b/common/src/main/resources/resourceconfigapi.mixins.json
@@ -4,12 +4,9 @@
     "package": "net.xstopho.resource_config_api.mixin",
     "refmap": "${mod_id}.refmap.json",
     "compatibilityLevel": "JAVA_17",
-    "mixins": [
-    ],
-    "client": [
-    ],
-    "server": [
-    ],
+    "mixins": [],
+    "client": [],
+    "server": [],
     "injectors": {
         "defaultRequire": 1
     }
