--- a/gradle.properties
+++ b/gradle.properties
@@ -30,6 +30,7 @@ forge_version_range=[51,)
 # NeoForge
 neoforge_version=21.0.8-beta
 neoforge_loader_version_range=[2,)
+neogradle.subsystems.conventions.runs.create-default-run-per-type=false
 
 # Dependencies
 night_config=3.7.2
