--- a/settings.gradle
+++ b/settings.gradle
@@ -13,7 +13,7 @@ plugins {
 }
 
 // This should match the folder name of the project, or else IDEA may complain (see https://youtrack.jetbrains.com/issue/IDEA-317606)
-rootProject.name = 'Resource-Config-API'
+rootProject.name = 'Resource-Config-API-1.21'
 include("common")
 include("fabric")
 include("forge")
