--- a/fabric/build.gradle
+++ b/fabric/build.gradle
@@ -7,12 +7,21 @@ configurations {
     includedLibs
 }
 
+repositories {
+    maven {
+        name = "Terraformers"
+        url = "https://maven.terraformersmc.com/"
+    }
+}
+
 dependencies {
     minecraft "com.mojang:minecraft:${minecraft_version}"
     mappings loom.officialMojangMappings()
 
     modImplementation "net.fabricmc:fabric-loader:${fabric_loader_version}"
     modApi "net.fabricmc.fabric-api:fabric-api:${fabric_api_version}+${minecraft_version}"
+
+    modImplementation("com.terraformersmc:modmenu:${mod_menu}")
 
     implementation group: 'com.electronwill.night-config', name: 'toml', version: "${night_config}"
     includedLibs group: 'com.electronwill.night-config', name: 'toml', version: "${night_config}"
