--- a/gradle.properties
+++ b/gradle.properties
@@ -33,4 +33,5 @@ neoforge_loader_version_range=[2,)
 neogradle.subsystems.conventions.runs.create-default-run-per-type=false
 
 # Dependencies
-night_config=3.7.2
+night_config=3.7.4
+mod_menu=11.0.0
