--- a/build.gradle
+++ b/build.gradle
@@ -1,40 +1,6 @@
 plugins {
-    // Required for NeoGradle
-    id "org.jetbrains.gradle.plugin.idea-ext" version "1.1.7"
-    id "me.modmuss50.mod-publish-plugin" version "0.5.1"
-}
-
-subprojects {
-    apply plugin: 'me.modmuss50.mod-publish-plugin'
-
-    // Basic Settings for the Mod Publish Plugin by modmuss50
-    // It also uses the CHANGELOG.md for an ongoing Changelog File
-    publishMods {
-        if (project.name != 'common') {
-            displayName = file.map { it.asFile.name }
-            type = STABLE
-
-            var changelogFile = rootProject.file('CHANGELOG.md')
-            if (changelogFile.exists()) changelog = changelogFile.text
-            else changelog = 'NO VALID CHANGELOG FILE FOUND!'
-
-            modrinth {
-                accessToken = MODRINTH_API_KEY
-                projectId = modrinth_id
-
-                minecraftVersions.add(minecraft_version)
-            }
-            curseforge {
-                accessToken = CURSEFORGE_API_KEY
-                projectId = curseforge_id
-
-                clientRequired = true
-                serverRequired = true
-
-                minecraftVersions.add(minecraft_version)
-
-                javaVersions.add(JavaVersion.VERSION_21)
-            }
-        }
-    }
+    id 'fabric-loom' version '1.7-SNAPSHOT' apply false
+    id 'net.neoforged.moddev' version '1.0.1' apply false
+    id 'net.minecraftforge.gradle' version '[6.0.25, 6.2)' apply false
+    id "me.modmuss50.mod-publish-plugin" version "0.5.1" apply false
 }
