--- a/buildSrc/src/main/groovy/ml-common.gradle
+++ b/buildSrc/src/main/groovy/ml-common.gradle
@@ -8,15 +8,14 @@ base {
 }
 
 java {
-    toolchain.languageVersion = JavaLanguageVersion.of(21)
+    toolchain.languageVersion = JavaLanguageVersion.of(java_version)
     withSourcesJar()
     withJavadocJar()
 }
 
 repositories {
-    mavenCentral()
-    maven { url 'https://raw.githubusercontent.com/Stein-N/resources/main/maven' }
-    maven { url 'https://repo.spongepowered.org/repository/maven-public/' }
+    maven { url 'https://maven.parchmentmc.org/' }
+    maven { url 'https://api.modrinth.com/maven' }
 }
 
 dependencies {
@@ -27,8 +26,39 @@ tasks.named('javadoc', Javadoc) {
     options.addStringOption('Xdoclint:none', '-quiet')
 }
 
-tasks.withType(GenerateModuleMetadata).configureEach {
-    enabled = project.name == 'neoforge'
+['apiElements', 'runtimeElements', 'sourcesElements', 'javadocElements'].each { variant ->
+    configurations."$variant".outgoing {
+        capability("$group:${base.archivesName.get()}:$version")
+        capability("$group:$mod_id-${project.name}-${minecraft_version}:$version")
+        capability("$group:$mod_id:$version")
+    }
+    publishing.publications.configureEach {
+        suppressPomMetadataWarningsFor(variant)
+    }
+}
+
+jar {
+    from(rootProject.file("LICENSE")) {
+        rename { "${it}_${mod_name}" }
+    }
+
+    manifest {
+        attributes([
+                'Specification-Title'   : mod_name,
+                'Specification-Vendor'  : mod_author,
+                'Specification-Version' : project.jar.archiveVersion,
+                'Implementation-Title'  : project.name,
+                'Implementation-Version': project.jar.archiveVersion,
+                'Implementation-Vendor' : mod_author,
+                'Built-On-Minecraft'    : minecraft_version
+        ])
+    }
+}
+
+sourcesJar {
+    from(rootProject.file("LICENSE")) {
+        rename { "${it}_${mod_name}" }
+    }
 }
 
 processResources {
@@ -36,6 +66,7 @@ processResources {
             // Project related Keys
             "version": version,
             "group": project.group,
+            "java_version": java_version,
 
             // Mod related Keys
             "minecraft_version": minecraft_version,
@@ -53,17 +84,15 @@ processResources {
             "fabric_loader_version": fabric_loader_version,
             "fabric_api_version": fabric_api_version,
 
-            // Forge Keys
-            "forge_version": forge_version,
-            "forge_loader_version_range": forge_loader_version_range,
-            "forge_version_range": forge_version_range,
-
             // NeoForge Keys
             "neoforge_version": neoforge_version,
-            "neoforge_loader_version_range": neoforge_loader_version_range
+
+            // Forge Keys
+            "forge_version": forge_version,
+            "forge_version_range": forge_version_range
     ]
 
-    filesMatching(['pack.mcmeta', 'fabric.mod.json', 'META-INF/neoforge.mods.toml', 'META-INF/mods.toml',  '*.mixins.json']) {
+    filesMatching(['pack.mcmeta', 'fabric.mod.json', 'META-INF/neoforge.mods.toml', 'META-INF/mods.toml', '*.mixins.json']) {
         expand expandProps
     }
     inputs.properties(expandProps)
