--- a/gradle.properties
+++ b/gradle.properties
@@ -2,8 +2,9 @@ org.gradle.jvmargs=-Xmx4096M
 org.gradle.daemon=false
 
 # Project
-version=1.21-2.0.0
+version=1.21-2.1.0
 group=net.xstopho.resourceconfigapi
+java_version=21
 curseforge_id=975801
 modrinth_id=69TY9iyJ
 
@@ -14,24 +15,25 @@ mod_author=xStopho
 mod_id=resourceconfigapi
 mod_license=MIT
 mod_credits=
-mod_description=Very Basic Config API based on Night Config. \nIt doesn't have fancy features.
+mod_description=Config API mainly for my own mods.
+minecraft_version_range=[1.21, 1.21.1)
 
-minecraft_version_range=[1.21, 1.22)
+neoform_version=1.21-20240613.152323
+parchment_version=2024.06.23
 
 # Fabric
-fabric_api_version=0.100.1
 fabric_loader_version=0.15.11
+fabric_api_version=0.100.4
+
+# NeoForge
+neoforge_version=21.0.37-beta
 
 # Forge
 forge_version=51.0.8
-forge_loader_version_range=[51,)
 forge_version_range=[51,)
 
-# NeoForge
-neoforge_version=21.0.8-beta
-neoforge_loader_version_range=[2,)
-neogradle.subsystems.conventions.runs.create-default-run-per-type=false
-
 # Dependencies
-night_config=3.7.4
+night_config=3.8.0
+
+# Runtime Mods
 mod_menu=11.0.0
