--- a/buildSrc/src/main/groovy/ml-common.gradle
+++ b/buildSrc/src/main/groovy/ml-common.gradle
@@ -16,6 +16,7 @@ java {
 repositories {
     maven { url 'https://maven.parchmentmc.org/' }
     maven { url 'https://api.modrinth.com/maven' }
+    maven { url 'https://maven.terraformersmc.com/' }
 }
 
 dependencies {
