--- a/forge/build.gradle
+++ b/forge/build.gradle
@@ -4,6 +4,10 @@ plugins {
     id 'org.spongepowered.mixin' version '0.7-SNAPSHOT'
 }
 
+configurations {
+    excludeImpl.extendsFrom implementation
+}
+
 sourceSets {
     testmod {
         runtimeClasspath += main.runtimeClasspath;
@@ -13,7 +17,7 @@ sourceSets {
 
 dependencies {
     minecraft "net.minecraftforge:forge:${minecraft_version}-${forge_version}"
-    implementation('net.sf.jopt-simple:jopt-simple:5.0.4') { version { strictly '5.0.4' } }
+    excludeImpl('net.sf.jopt-simple:jopt-simple:5.0.4') { version { strictly '5.0.4' } }
     testmodImplementation sourceSets.main.output
 }
 
