--- a/forge/build.gradle
+++ b/forge/build.gradle
@@ -5,7 +5,7 @@ plugins {
 }
 
 configurations {
-    excludeImpl.extendsFrom implementation
+    excludedImpl.extendsFrom implementation
 }
 
 sourceSets {
@@ -17,7 +17,7 @@ sourceSets {
 
 dependencies {
     minecraft "net.minecraftforge:forge:${minecraft_version}-${forge_version}"
-    excludeImpl('net.sf.jopt-simple:jopt-simple:5.0.4') { version { strictly '5.0.4' } }
+    excludedImpl('net.sf.jopt-simple:jopt-simple:5.0.4') { version { strictly '5.0.4' } }
     testmodImplementation sourceSets.main.output
 }
 
