--- a/forge/build.gradle
+++ b/forge/build.gradle
@@ -4,10 +4,6 @@ plugins {
     id 'org.spongepowered.mixin' version '0.7-SNAPSHOT'
 }
 
-configurations {
-    excludedImpl.extendsFrom implementation
-}
-
 sourceSets {
     testmod {
         runtimeClasspath += main.runtimeClasspath;
@@ -17,7 +13,7 @@ sourceSets {
 
 dependencies {
     minecraft "net.minecraftforge:forge:${minecraft_version}-${forge_version}"
-    excludedImpl('net.sf.jopt-simple:jopt-simple:5.0.4') { version { strictly '5.0.4' } }
+    implementation('net.sf.jopt-simple:jopt-simple:5.0.4') { version { strictly '5.0.4' } }
     testmodImplementation sourceSets.main.output
 }
 
