forge: remove unnecessary publish code

--- a/buildSrc/src/main/groovy/ml-common-publish.gradle
+++ b/buildSrc/src/main/groovy/ml-common-publish.gradle
@@ -11,6 +11,12 @@ publishing {
         mavenJava(MavenPublication) {
             artifactId = artifact
             from components.java
+
+            pom.withXml {
+                asNode().dependencies.each { node ->
+                    node.replaceNode {}
+                }
+            }
         }
     }
 
