--- a/forge/build.gradle
+++ b/forge/build.gradle
@@ -1,6 +1,6 @@
 plugins {
     id 'ml-loader'
-    id 'net.minecraftforge.gradle' version '[6.0.25, 6.2)'
+    id 'net.minecraftforge.gradle'
     id 'org.spongepowered.mixin' version '0.7-SNAPSHOT'
 }
 
@@ -21,13 +21,6 @@ minecraft {
     mappings channel: 'official', version: minecraft_version
     reobf = false
     copyIdeResources = true //Calls processResources when in dev
-
-    // Automatically enable forge AccessTransformers if the file exists
-    // This location is hardcoded in Forge and can not be changed.
-    // https://github.com/MinecraftForge/MinecraftForge/blob/be1698bb1554f9c8fa2f58e32b9ab70bc4385e60/fmlloader/src/main/java/net/minecraftforge/fml/loading/moddiscovery/ModFile.java#L123
-    if (file('src/main/resources/META-INF/accesstransformer.cfg').exists()) {
-        accessTransformer = file('src/main/resources/META-INF/accesstransformer.cfg')
-    }
 
     runs {
         client {
