project: remove gui related stuff

--- a/gradle.properties
+++ b/gradle.properties
@@ -23,13 +23,13 @@ parchment_version=2024.06.23
 
 # Fabric
 fabric_loader_version=0.15.11
-fabric_api_version=0.100.7
+fabric_api_version=0.100.8
 
 # NeoForge
-neoforge_version=21.0.113-beta
+neoforge_version=21.0.147
 
 # Forge
-forge_version=51.0.26
+forge_version=51.0.29
 forge_version_range=[51,)
 
 # Dependencies
