--- a/common/build.gradle
+++ b/common/build.gradle
@@ -7,7 +7,7 @@ neoForge {
     neoFormVersion = neoform_version
 
     parchment {
-        minecraftVersion = minecraft_version
+        minecraftVersion = '1.21'
         mappingsVersion = parchment_version
     }
 }
