--- a/neoforge/build.gradle
+++ b/neoforge/build.gradle
@@ -23,7 +23,7 @@ neoForge {
 
 
     parchment {
-        minecraftVersion = minecraft_version
+        minecraftVersion = '1.21'
         mappingsVersion = parchment_version
     }
 
