--- a/gradle.properties
+++ b/gradle.properties
@@ -2,7 +2,7 @@ org.gradle.jvmargs=-Xmx4096M
 org.gradle.daemon=false
 
 # Project
-version=1.21-2.1.2
+version=1.21-2.1.3
 group=net.xstopho.resourceconfigapi
 java_version=21
 curseforge_id=975801
@@ -27,6 +27,7 @@ fabric_api_version=0.102.1
 
 # NeoForge
 neoforge_version=21.1.8
+neoforge_version_range=[20,)
 
 # Forge
 forge_version=52.0.2
