project: change gradle setup

--- a/buildSrc/src/main/groovy/ml-loader.gradle
+++ b/buildSrc/src/main/groovy/ml-loader.gradle
@@ -3,42 +3,23 @@ plugins {
     id 'ml-loader-publish'
 }
 
-configurations {
-    commonJava {
-        canBeResolved = true
-    }
-    commonResources {
-        canBeResolved = true
-    }
-}
-
 dependencies {
-    compileOnly(project(':common')) {
-        capabilities { requireCapability "$group:$mod_id" }
-    }
-
-    commonJava project(path: ':common', configuration: 'commonJava')
-    commonResources project(path: ':common', configuration: 'commonResources')
+    compileOnly(project(':common'))
 }
 
 tasks.named('compileJava', JavaCompile) {
-    dependsOn(configurations.commonJava)
-    source(configurations.commonJava)
+    source(project(':common').sourceSets.main.allSource)
 }
 
 tasks.named('javadoc', Javadoc) {
-    dependsOn(configurations.commonJava)
-    source(configurations.commonJava)
+    source(project(':common').sourceSets.main.allJava)
 }
 
 tasks.named('sourcesJar', Jar) {
-    dependsOn(configurations.commonJava)
-    from(configurations.commonJava)
-    dependsOn(configurations.commonResources)
-    from(configurations.commonResources)
+    from(project(":common").sourceSets.main.allSource)
 }
 
 processResources {
-    dependsOn(configurations.commonResources)
-    from(configurations.commonResources)
+    from project(':common').sourceSets.main.resources
+    from file('src/generated/resources')
 }
