--- a/neoforge/build.gradle
+++ b/neoforge/build.gradle
@@ -23,7 +23,7 @@ neoForge {
 
 
     parchment {
-        minecraftVersion = '1.21'
+        minecraftVersion = parchment_mc_version
         mappingsVersion = parchment_version
     }
 
