--- a/buildSrc/src/main/groovy/ml-common.gradle
+++ b/buildSrc/src/main/groovy/ml-common.gradle
@@ -14,9 +14,11 @@ java {
 }
 
 repositories {
+    mavenCentral()
+    maven { url 'https://raw.githubusercontent.com/Stein-N/resources/main/maven' }
+    maven { url 'https://maven.terraformersmc.com/' }
     maven { url 'https://maven.parchmentmc.org/' }
     maven { url 'https://api.modrinth.com/maven' }
-    maven { url 'https://maven.terraformersmc.com/' }
 }
 
 dependencies {
@@ -25,17 +27,6 @@ dependencies {
 
 tasks.named('javadoc', Javadoc) {
     options.addStringOption('Xdoclint:none', '-quiet')
-}
-
-['apiElements', 'runtimeElements', 'sourcesElements', 'javadocElements'].each { variant ->
-    configurations."$variant".outgoing {
-        capability("$group:${base.archivesName.get()}:$version")
-        capability("$group:$mod_id-${project.name}-${minecraft_version}:$version")
-        capability("$group:$mod_id:$version")
-    }
-    publishing.publications.configureEach {
-        suppressPomMetadataWarningsFor(variant)
-    }
 }
 
 jar {
