--- a/common/build.gradle
+++ b/common/build.gradle
@@ -7,7 +7,7 @@ neoForge {
     neoFormVersion = neoform_version
 
     parchment {
-        minecraftVersion = '1.21'
+        minecraftVersion = parchment_mc_version
         mappingsVersion = parchment_version
     }
 }
@@ -16,20 +16,4 @@ dependencies {
     compileOnly group:'org.spongepowered', name:'mixin', version:'0.8.5'
 
     implementation "com.electronwill.night-config:toml:${night_config}"
-}
-
-configurations {
-    commonJava {
-        canBeResolved = false
-        canBeConsumed = true
-    }
-    commonResources {
-        canBeResolved = false
-        canBeConsumed = true
-    }
-}
-
-artifacts {
-    commonJava sourceSets.main.java.sourceDirectories.singleFile
-    commonResources sourceSets.main.resources.sourceDirectories.singleFile
 }
