--- a/forge/build.gradle
+++ b/forge/build.gradle
@@ -19,8 +19,8 @@ dependencies {
 
 minecraft {
     mappings channel: 'official', version: minecraft_version
+    copyIdeResources = true
     reobf = false
-    copyIdeResources = true //Calls processResources when in dev
 
     runs {
         client {
