--- a/gradle.properties
+++ b/gradle.properties
@@ -2,7 +2,7 @@ org.gradle.jvmargs=-Xmx4096M
 org.gradle.daemon=false
 
 # Project
-version=1.21-2.1.3
+version=1.21-2.1.4
 group=net.xstopho.resourceconfigapi
 java_version=21
 curseforge_id=975801
@@ -19,6 +19,7 @@ mod_description=Config API mainly for my own mods.
 minecraft_version_range=[1.21, 1.22)
 
 neoform_version=1.21.1-20240808.144430
+parchment_mc_version=1.21
 parchment_version=2024.07.28
 
 # Fabric
@@ -27,7 +28,7 @@ fabric_api_version=0.102.1
 
 # NeoForge
 neoforge_version=21.1.8
-neoforge_version_range=[20,)
+neoforge_version_range=[21, 22)
 
 # Forge
 forge_version=52.0.2
